--- a/frontend/src/features/authentication/components/Box/Box.module.scss
+++ b/frontend/src/features/authentication/components/Box/Box.module.scss
@@ -1,11 +1,19 @@
 .root {
-  @media screen and (width >= 768px) {
+  background: rgba(0, 0, 0, 0.6); /* no fill */
+  backdrop-filter: none;   /* remove blur effect */
+  border: 2px solid rgba(0, 0, 0, 0.9); /* stronger neon red */
+  border-radius: 16px;
+  padding: 2rem;
+  box-shadow: 0 0 5px rgba(255, 26, 26, 0.8),
+              0 0 5px rgba(255, 26, 26, 0.6),
+              0 0 5px rgba(255, 26, 26, 0.4);
+  width: 300px;
+  text-align: center;
+  margin: 2rem auto;
+  
+
+  @media screen and (min-width: 768px) {
     padding: 1.5rem;
     width: 30rem;
-    margin: 0 auto;
-    background-color: black;
-    border: 1px solid #e0e0e0;
-    border-radius: 0.5rem;
-    box-shadow: 0px 0px 5px 5px rgba(200,0,0,0.25);
   }
 }
