--- a/frontend/src/features/authentication/components/Input/Input.module.scss
+++ b/frontend/src/features/authentication/components/Input/Input.module.scss
@@ -1,13 +1,26 @@
-.root{
+.root {
     display: grid;
     gap: 0.5rem;
     margin-block: 1rem;
 
-    input{
+    input {
+        background: transparent;
+        box-shadow: 0 0 .4vw rgba(0, 0, 0, 0.5), 0 0 0 .15vw transparent;
         width: 100%;
         padding: 0.7rem;
-        border: 1px solid rgba(255,255,255, 0.6);
+        border: 2px solid rgb(245, 226, 226);
         border-radius: 4px;
-        color: black;
+        color: white;
+        font-size: .9vw;
+
+        transition: .4s;
+
+        &:hover {
+            box-shadow: 0 0 0 .15vw rgba(159, 211, 232, 0.186);
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 .15vw red;
+        }
     }
 }
