--- a/frontend/src/features/authentication/components/Layout/Layout.module.scss
+++ b/frontend/src/features/authentication/components/Layout/Layout.module.scss
@@ -2,14 +2,13 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
-    background-color: rgb(18, 17, 17);
     color: white;
 
     .container{
-        max-width: 74rem;
+        max-width: 84rem;
         width: 100%;
         margin: 0 auto;
-        padding: 2rem;
+        // padding: 2rem;
     }
 
     h1{
@@ -18,9 +17,19 @@
         margin-bottom: 1rem;
     }
 
-    .logo{
-        width: 7rem;
+     h2{
+        font-size: 1.3rem;
+        font-weight: normal;
+        margin-bottom: 1rem;
     }
+    
+
+    .logo{
+        width: 17rem;
+        height: 10rem;
+//    filter: drop-shadow(0 0 1px #440303) 
+//          drop-shadow(0 0 1px #510303)
+     }
 
     a{
         font-weight: bold;
@@ -37,7 +46,7 @@
     }
 
     img{
-        width: 4rem;
+        width: 8rem;
     }
 
     ul {
