--- a/frontend/src/features/authentication/components/Separator/Separator.module.scss
+++ b/frontend/src/features/authentication/components/Separator/Separator.module.scss
@@ -1,19 +1,15 @@
-.root{
+.root {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr; /* lines expand equally */
+  align-items: center;
+  gap: 1rem;
+  margin-block: 1rem;
 
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: center;
-    gap: 1rem;
-    margin-block: 1rem;
-
-
-    &::after,
-    &::before{
-        content: "";
-        height: 1px;
-        margin: 1rem 0;
-        width: 2rem;
-        display: block;
-        background-color: rgba(255,255,255,0.15);
-    }
+  &::before,
+  &::after {
+    content: "";
+    height: 1px;
+    display: block;
+    background-color: rgba(255, 255, 255, 0.25);
+  }
 }
