--- a/frontend/src/features/authentication/components/Box/Box.module.scss
+++ b/frontend/src/features/authentication/components/Box/Box.module.scss
@@ -1,15 +1,16 @@
 .root {
-  background: rgba(0, 0, 0, 0.6); /* no fill */
+  background: rgba(0, 0, 0, 0.493); /* no fill */
   backdrop-filter: none;   /* remove blur effect */
   border: 2px solid rgba(0, 0, 0, 0.9); /* stronger neon red */
-  border-radius: 16px;
+  border-radius: 20px;
   padding: 2rem;
-  box-shadow: 0 0 5px rgba(255, 26, 26, 0.8),
-              0 0 5px rgba(255, 26, 26, 0.6),
-              0 0 5px rgba(255, 26, 26, 0.4);
+  box-shadow: 0 0 5px rgba(86, 180, 245, 0.4),
+              0 0 5px rgba(86, 180, 245, 0.5),
+              0 0 5px rgba(86, 180, 245, 0.4);
   width: 300px;
   text-align: center;
   margin: 2rem auto;
+  color: var(--web-text);
   
 
   @media screen and (min-width: 768px) {
